# badminton-vision-suite

./: .gitignore  README.md  app.py  ffmpeg_log.txt  get_xy.py  image_preprocess.py  main.py  points.json  rallies.json  segment_list.txt  temp_audio.m4a  test_cv.py  test_gear.py  test_video.py  trim.py  video.py  video_editor.py
learn-opengl/: CMakeLists.txt
learn-opengl/include/glad/: glad.h
learn-opengl/src/: glad.c  main.cpp
video-app/: CMakeLists.txt
video-app/lib/FFmpeg/: CMakeLists.txt
video-app/lib/glad/include/glad/: glad.h
video-app/lib/glad/src/: glad.c
video-app/src/: inspect_avframe.c  load_frame.cpp  main.cpp
